[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/SolarSystem/SystemObject.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="Animation" id=2]
resource_name = "illuminate"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("StaticBody2D/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.635294, 0.627451, 0.627451, 1 ), Color( 0.458824, 0.458824, 0.458824, 1 ), Color( 0.635294, 0.627451, 0.627451, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="SystemObject" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Sprite" type="Sprite" parent="StaticBody2D"]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 1 )

[node name="Satellites" type="Node2D" parent="StaticBody2D"]

[node name="NameLabel" type="Label" parent="StaticBody2D"]
margin_left = -47.0
margin_top = 43.968
margin_right = 47.0
margin_bottom = 57.968
grow_horizontal = 2
text = "System Object"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/illuminate = SubResource( 2 )
[connection signal="screen_entered" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityEnabler2D" to="." method="_on_VisibilityEnabler2D_screen_exited"]
